// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllers configures tie: controllers-snap-development 1`] = `
Object {
  "baseUrl": "http://example.com",
  "controllers": Array [
    [Function],
  ],
  "cookieSecret": "shazam",
  "forceHttps": true,
  "gzip": true,
  "helmet": undefined,
  "indexCatchAll": true,
  "initializers": Object {
    "afterControllers": Array [
      [Function],
    ],
    "beforeControllers": Array [
      [Function],
    ],
  },
  "json": undefined,
  "logging": Object {
    "logger": "test-was-ok",
    "middleware": [Function],
  },
  "sendValidationErrors": undefined,
  "staticFolder": "/test/fixtures/app-e2e/public",
  "urlencoded": undefined,
}
`;

exports[`controllers configures tie: controllers-snap-developmentnullish 1`] = `
Object {
  "baseUrl": "http://localhost:5150",
  "controllers": Array [
    [Function],
  ],
  "cookieSecret": undefined,
  "forceHttps": undefined,
  "gzip": undefined,
  "helmet": undefined,
  "indexCatchAll": undefined,
  "initializers": Object {
    "afterControllers": Array [
      [Function],
    ],
    "beforeControllers": Array [
      [Function],
    ],
  },
  "json": undefined,
  "logging": Object {
    "logger": "test-was-ok",
    "middleware": [Function],
  },
  "sendValidationErrors": undefined,
  "staticFolder": undefined,
  "urlencoded": undefined,
}
`;

exports[`controllers ties 1`] = `
Array [
  "_events",
  "_eventsCount",
  "_maxListeners",
  "setMaxListeners",
  "getMaxListeners",
  "emit",
  "addListener",
  "on",
  "prependListener",
  "once",
  "prependOnceListener",
  "removeListener",
  "off",
  "removeAllListeners",
  "listeners",
  "rawListeners",
  "listenerCount",
  "eventNames",
  "init",
  "defaultConfiguration",
  "lazyrouter",
  "handle",
  "use",
  "route",
  "engine",
  "param",
  "set",
  "path",
  "enabled",
  "disabled",
  "enable",
  "disable",
  "acl",
  "bind",
  "checkout",
  "connect",
  "copy",
  "delete",
  "get",
  "head",
  "link",
  "lock",
  "m-search",
  "merge",
  "mkactivity",
  "mkcalendar",
  "mkcol",
  "move",
  "notify",
  "options",
  "patch",
  "post",
  "propfind",
  "proppatch",
  "purge",
  "put",
  "rebind",
  "report",
  "search",
  "source",
  "subscribe",
  "trace",
  "unbind",
  "unlink",
  "unlock",
  "unsubscribe",
  "all",
  "del",
  "render",
  "listen",
  "request",
  "response",
  "cache",
  "engines",
  "settings",
  "locals",
  "mountpath",
  "_router",
  "__opts",
]
`;
